Moved input data in GET requests from body to query params
