# rest_api/app_account/handlers/get_jetton.go
@@ -19,7 +19,7 @@ import (
 
 
 // эндпоинт получения информации о монете аккаунта по её адресу
-//	@Summary		Get jetton balance on account [NOT WORK IN SWAGGER]
+//	@Summary		Get jetton balance on account
 //	@Description	Get jetton balance on account and other info about jetton by it master address
 //	@Router			/account/get-jetton [get]
 //	@ID				get-jetton
@@ -27,14 +27,14 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Security		ApiKeyAuth
-//	@Param			JSON		body	serializers.GetJettonIn	true	"GetJettonIn struct params"
+//	@Param			Query		query	serializers.GetJettonIn	true	"GetJettonIn struct params"
 //	@Success		200		{object}	myTonapiAccount.AccountJetton
 func GetJetton(ctx echo.Context) error {
 	var err error
 	var dataIn serializers.GetJettonIn
 	var dataOut myTonapiAccount.AccountJetton
 
-	// парсинг JSON-body
+	// парсинг query-параметров
 	if err = ctx.Bind(&dataIn); err != nil {
 		return err
 	}
