# rest_api/app_jettons/serializers/get_info.go
@@ -11,7 +11,7 @@ import (
 // @Description Структура входных данных для получения информации о монете по её адресу
 type GetInfoIn struct {
 	// мастер-адрес монеты (jetton_master)
-	MasterAddress string `json:"masterAddress" myvalid:"required" example:"EQC47093oX5Xhb0xuk2lCr2RhS8rj-vul61u4W2UH5ORmG_O"`
+	MasterAddress string `query:"masterAddress" json:"masterAddress" myvalid:"required" example:"EQC47093oX5Xhb0xuk2lCr2RhS8rj-vul61u4W2UH5ORmG_O"`
 }
 
 
