# rest_api/app_transactions/handlers/cell_pre_request.go
@@ -14,7 +14,7 @@ import (
 
 
 // эндпоинт получения информации о последующей транзакции продажи монет
-//	@Summary		Cell pre-request [NOT WORK IN SWAGGER]
+//	@Summary		Cell pre-request
 //	@Description	Get pre-request info about cell transaction
 //	@Router			/transactions/cell/pre-request [get]
 //	@ID				cell-pre-request
@@ -22,7 +22,7 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Security		ApiKeyAuth
-//	@Param			JSON		body	serializers.CellPreRequestIn	true	"CellPreRequestIn struct params"
+//	@Param			Query		query	serializers.CellPreRequestIn	true	"CellPreRequestIn struct params"
 //	@Success		200		{object}	myTongoTransactions.PreRequestCellJetton
 func CellPreRequest(ctx echo.Context) error {
 	var err error
