# rest_api/app_transactions/serializers/buy_pre_request.go
@@ -11,11 +11,11 @@ import (
 // @Description Cтруктура входных данных для получения информации о последующей транзакции покупки
 type BuyPreRequestIn struct {
 	// мастер-адрес покупаемой монеты (jetton_master)
-	JettonCA string `json:"jettonCA" myvalid:"required" example:"EQC47093oX5Xhb0xuk2lCr2RhS8rj-vul61u4W2UH5ORmG_O"`
+	JettonCA string `query:"jettonCA" json:"jettonCA" myvalid:"required" example:"EQC47093oX5Xhb0xuk2lCr2RhS8rj-vul61u4W2UH5ORmG_O"`
 	// кол-во используемых TON для покупки в формате, удобном для человека
-	Amount float64 `json:"amount" myvalid:"required" example:"0.1"`
+	Amount float64 `query:"amount" json:"amount" myvalid:"required" example:"0.1"`
 	// процент проскальзывания 
-	Slippage int `json:"slippage" myvalid:"required|min:0|max:100" example:"20"`
+	Slippage int `query:"slippage" json:"slippage" myvalid:"required|min:0|max:100" example:"20"`
 }
 
 
